'Mark messages as read' as account option not working for Search Folders
Based on issue #113 (closed), the feature for 'Mark messages as read' as account option does work on real account folders but not on Search Folders working on that account.
How to reproduce:
Enable global option [x] Mark messages as read Disable [ ] Mark messages as read on a single account FOO Create Search Folder showing the INBOX of account FOO Select unread mail -> This marks that mail as 'read' even though it should not