I#641 - 'Mark messages as read' as account option not working for Search Folders

Closes https://gitlab.gnome.org/GNOME/evolution/issues/641